// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VuePagination component renders correctly when the list should be broken on both sides 1`] = `
<ul class="container">
  <li class="previous"><a aria-disabled="false" aria-label="Previous page" role="button" tabindex="0" class="previous-link">Previous</a></li>
  <li class="page"><a aria-label="Page 1" role="button" tabindex="0" class="page-link">
      1
    </a></li>
  <li class="break"><a role="button" tabindex="0" class="break-link">...</a></li>
  <li class="page
      active"><a aria-label="Page 3" role="button" tabindex="0" class="page-link
        active-link">
      3
    </a></li>
  <li class="break"><a role="button" tabindex="0" class="break-link">...</a></li>
  <li class="page"><a aria-label="Page 5" role="button" tabindex="0" class="page-link">
      5
    </a></li>
  <li class="next"><a aria-disabled="false" aria-label="Next page" role="button" tabindex="0" class="next-link">Next</a></li>
</ul>
`;

exports[`VuePagination component renders correctly when the list should be broken on the left side 1`] = `
<ul class="container">
  <li class="previous"><a aria-disabled="false" aria-label="Previous page" role="button" tabindex="0" class="previous-link">Previous</a></li>
  <li class="page"><a aria-label="Page 1" role="button" tabindex="0" class="page-link">
      1
    </a></li>
  <li class="break"><a role="button" tabindex="0" class="break-link">...</a></li>
  <li class="page
      active"><a aria-label="Page 3" role="button" tabindex="0" class="page-link
        active-link">
      3
    </a></li>
  <!---->
  <li class="next
      disabled"><a aria-disabled="true" aria-label="Next page" role="button" tabindex="0" class="next-link">Next</a></li>
</ul>
`;

exports[`VuePagination component renders correctly when the list should be broken on the right side 1`] = `
<ul class="container">
  <li class="previous
      disabled"><a aria-disabled="true" aria-label="Previous page" role="button" tabindex="0" class="previous-link">Previous</a></li>
  <!---->
  <li class="page
      active"><a aria-label="Page 1" role="button" tabindex="0" class="page-link
        active-link">
      1
    </a></li>
  <li class="break"><a role="button" tabindex="0" class="break-link">...</a></li>
  <li class="page"><a aria-label="Page 3" role="button" tabindex="0" class="page-link">
      3
    </a></li>
  <li class="next"><a aria-disabled="false" aria-label="Next page" role="button" tabindex="0" class="next-link">Next</a></li>
</ul>
`;

exports[`VuePagination component renders correctly when the number of pages is 0 1`] = `
<ul class="container">
  <li class="previous
      disabled"><a aria-disabled="true" aria-label="Previous page" role="button" tabindex="0" class="previous-link">Previous</a></li>
  <!---->
  <!---->
  <li class="next
      disabled"><a aria-disabled="false" aria-label="Next page" role="button" tabindex="0" class="next-link">Next</a></li>
</ul>
`;

exports[`VuePagination component renders correctly when there are not enough pages to break the list and the first page is the active one 1`] = `
<ul class="container">
  <li class="previous
      disabled"><a aria-disabled="true" aria-label="Previous page" role="button" tabindex="0" class="previous-link">Previous</a></li>
  <!---->
  <li class="page
      active"><a aria-label="Page 1" role="button" tabindex="0" class="page-link
        active-link">
      1
    </a></li>
  <!---->
  <li class="page"><a aria-label="Page 2" role="button" tabindex="0" class="page-link">
      2
    </a></li>
  <li class="next"><a aria-disabled="false" aria-label="Next page" role="button" tabindex="0" class="next-link">Next</a></li>
</ul>
`;

exports[`VuePagination component renders correctly when there are not enough pages to break the list and the last page is the active one 1`] = `
<ul class="container">
  <li class="previous"><a aria-disabled="false" aria-label="Previous page" role="button" tabindex="0" class="previous-link">Previous</a></li>
  <li class="page"><a aria-label="Page 1" role="button" tabindex="0" class="page-link">
      1
    </a></li>
  <!---->
  <li class="page
      active"><a aria-label="Page 2" role="button" tabindex="0" class="page-link
        active-link">
      2
    </a></li>
  <!---->
  <li class="next
      disabled"><a aria-disabled="true" aria-label="Next page" role="button" tabindex="0" class="next-link">Next</a></li>
</ul>
`;
